mdapi/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Bundle_Type__c</fullName>
        <label>Bundle Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Bundled</fullName>
                </value>
                <value>
                    <fullName>Backup/Cloud Bundle</fullName>
                </value>
                <value>
                    <fullName>SBS with 10 Desktop bundle</fullName>
                </value>
                <value>
                    <fullName>Backup/IME Bundle</fullName>
                </value>
                <value>
                    <fullName>SPS with 10 Desktop bundle</fullName>
                </value>
                <value>
                    <fullName>MSP/Cloud Bundle Promo</fullName>
                </value>
                <value>
                    <fullName>NFR (Not for Resale)</fullName>
                </value>
                <value>
                    <fullName>Actn Pk Mini (1B/2D)</fullName>
                </value>
                <value>
                    <fullName>Actn Pk Maxi (3S/1B/3D)</fullName>
                </value>
                <value>
                    <fullName>Actn Pk Nrml (1S/5D)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pack_Size__c</fullName>
        <description>Number of activations included in each license.</description>
        <label>Pack Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Group__c</fullName>
        <label>Price Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Gov/Edu/Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Competitive Upgrade</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ScribeExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ScribeExternalId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Time_Period__c</fullName>
        <label>Time Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>2 Months</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>1Y</fullName>
                </value>
                <value>
                    <fullName>2W</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>2 Weeks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Virtual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volume_Level__c</fullName>
        <label>Volume Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>10+</fullName>
                </value>
                <value>
                    <fullName>25+</fullName>
                </value>
                <value>
                    <fullName>Qty 10+</fullName>
                </value>
                <value>
                    <fullName>Qty 1000-2999</fullName>
                </value>
                <value>
                    <fullName>Qty 100-199</fullName>
                </value>
                <value>
                    <fullName>Qty 100-499</fullName>
                </value>
                <value>
                    <fullName>Qty 10-24</fullName>
                </value>
                <value>
                    <fullName>Qty 10-49</fullName>
                </value>
                <value>
                    <fullName>Qty 1-19</fullName>
                </value>
                <value>
                    <fullName>Qty 1-4</fullName>
                </value>
                <value>
                    <fullName>Qty 1-9</fullName>
                </value>
                <value>
                    <fullName>Qty 2000-3999</fullName>
                </value>
                <value>
                    <fullName>Qty 200-299</fullName>
                </value>
                <value>
                    <fullName>Qty 200-399</fullName>
                </value>
                <value>
                    <fullName>Qty 20-99</fullName>
                </value>
                <value>
                    <fullName>Qty 21-24</fullName>
                </value>
                <value>
                    <fullName>Qty 25-49</fullName>
                </value>
                <value>
                    <fullName>Qty 3000+</fullName>
                </value>
                <value>
                    <fullName>Qty 300-399</fullName>
                </value>
                <value>
                    <fullName>Qty 4000+</fullName>
                </value>
                <value>
                    <fullName>Qty 400-499</fullName>
                </value>
                <value>
                    <fullName>Qty 400-999</fullName>
                </value>
                <value>
                    <fullName>Qty 500-1999</fullName>
                </value>
                <value>
                    <fullName>Qty 50-199</fullName>
                </value>
                <value>
                    <fullName>Qty 50-99</fullName>
                </value>
                <value>
                    <fullName>Qty 5-9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>